[gd_scene load_steps=15 format=3 uid="uid://uw3ilvepofj"]

[ext_resource type="Script" path="res://Scripts/FirebaseManager.gd" id="1_t567l"]
[ext_resource type="Script" path="res://Scripts/UI/MainViewController.cs" id="2_uui0a"]
[ext_resource type="Script" path="res://Scripts/UI/UIContainer.cs" id="3_r87le"]
[ext_resource type="Theme" uid="uid://y61pf7qtk7lm" path="res://Resources/basic_theme.tres" id="4_spket"]
[ext_resource type="Script" path="res://Scripts/UI/MainMenu.cs" id="5_7yr27"]
[ext_resource type="PackedScene" uid="uid://cdg0wgnfipld3" path="res://Scenes/character_screen.tscn" id="6_ti0rs"]
[ext_resource type="PackedScene" uid="uid://jl7336sn0y5" path="res://Scenes/fight_screen.tscn" id="7_84sto"]
[ext_resource type="PackedScene" uid="uid://row7e3aotb7f" path="res://Scenes/history_screen.tscn" id="8_q2p3c"]
[ext_resource type="PackedScene" uid="uid://b4nmg1cb5adht" path="res://Scenes/tournament_report_screen.tscn" id="9_4mixg"]
[ext_resource type="PackedScene" uid="uid://c0s2wkimx4yx4" path="res://Scenes/settings_screen.tscn" id="9_tel1q"]
[ext_resource type="PackedScene" uid="uid://y38roygy3dxd" path="res://Scenes/training_screen.tscn" id="10_jo5jt"]
[ext_resource type="Script" path="res://Scripts/UI/BackButton.cs" id="11_ctxk7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sy5u4"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.384314, 0.658824, 0.635294, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_offset = Vector2(2, 2)
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_plotl"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FirebaseManager" type="Node" parent="."]
script = ExtResource("1_t567l")

[node name="MainView" type="PanelContainer" parent="." node_paths=PackedStringArray("parent", "manager")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.5
offset_top = -80.5
offset_right = 287.5
offset_bottom = 80.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sy5u4")
script = ExtResource("2_uui0a")
parent = NodePath("..")
manager = NodePath("../FirebaseManager")

[node name="LoginPanel" type="VBoxContainer" parent="MainView"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
script = ExtResource("3_r87le")
container = 1

[node name="EmailField" type="LineEdit" parent="MainView/LoginPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("4_spket")
placeholder_text = "Email"
virtual_keyboard_type = 6

[node name="PasswordField" type="LineEdit" parent="MainView/LoginPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("4_spket")
placeholder_text = "Password"
virtual_keyboard_type = 6
secret = true

[node name="LoginButton" type="Button" parent="MainView/LoginPanel"]
layout_mode = 2
theme = ExtResource("4_spket")
text = "LOG IN"

[node name="SignUpButton" type="Button" parent="MainView/LoginPanel"]
layout_mode = 2
theme = ExtResource("4_spket")
text = "SIGN UP"

[node name="Feedback" type="VBoxContainer" parent="MainView/LoginPanel"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MainView/LoginPanel/Feedback"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_spket")
text = " NOT LOGGED IN"

[node name="ErrorLabel" type="Label" parent="MainView/LoginPanel/Feedback"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_spket")
theme_override_font_sizes/font_size = 24
autowrap_mode = 3

[node name="MainMenu" type="VBoxContainer" parent="MainView" node_paths=PackedStringArray("characterBtn", "fightBtn", "historyBtn", "trainingBtn", "settingsBtn")]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 50
script = ExtResource("5_7yr27")
characterBtn = NodePath("Character")
fightBtn = NodePath("Fight")
historyBtn = NodePath("History")
trainingBtn = NodePath("Train")
settingsBtn = NodePath("Settings")
container = 2

[node name="Title" type="Label" parent="MainView/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_spket")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
text = "RPS ARENA"

[node name="Character" type="Button" parent="MainView/MainMenu"]
layout_mode = 2
theme = ExtResource("4_spket")
theme_override_constants/outline_size = 0
text = "CHARACTER"

[node name="Fight" type="Button" parent="MainView/MainMenu"]
layout_mode = 2
theme = ExtResource("4_spket")
theme_override_constants/outline_size = 0
text = "FIGHT"

[node name="History" type="Button" parent="MainView/MainMenu"]
layout_mode = 2
theme = ExtResource("4_spket")
theme_override_constants/outline_size = 0
text = "HISTORY"

[node name="Train" type="Button" parent="MainView/MainMenu"]
layout_mode = 2
theme = ExtResource("4_spket")
theme_override_constants/outline_size = 0
text = "TRAIN"

[node name="Settings" type="Button" parent="MainView/MainMenu"]
layout_mode = 2
theme = ExtResource("4_spket")
theme_override_constants/outline_size = 0
text = "SETTINGS"

[node name="Log out" type="Button" parent="MainView/MainMenu"]
layout_mode = 2
theme = ExtResource("4_spket")
theme_override_constants/outline_size = 0
text = "LOG OUT"

[node name="CharacterScreen" parent="MainView" instance=ExtResource("6_ti0rs")]
visible = false
layout_mode = 2

[node name="FightScreen" parent="MainView" instance=ExtResource("7_84sto")]
visible = false
layout_mode = 2

[node name="HistoryScreen" parent="MainView" instance=ExtResource("8_q2p3c")]
visible = false
layout_mode = 2

[node name="TournamentReportScreen" parent="MainView" instance=ExtResource("9_4mixg")]
visible = false
layout_mode = 2

[node name="TrainingScreen" parent="MainView" instance=ExtResource("10_jo5jt")]
visible = false
layout_mode = 2

[node name="SettingsScreen" parent="MainView" instance=ExtResource("9_tel1q")]
visible = false
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
offset_left = 50.0
offset_top = 120.0
offset_right = 130.0
offset_bottom = 200.0
theme = ExtResource("4_spket")
theme_override_colors/font_pressed_color = Color(0.173747, 0.345716, 0.331612, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_plotl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_plotl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_plotl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_plotl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_plotl")
text = "<"
script = ExtResource("11_ctxk7")

[connection signal="pressed" from="MainView/LoginPanel/LoginButton" to="FirebaseManager" method="_on_login_button_pressed"]
[connection signal="pressed" from="MainView/LoginPanel/SignUpButton" to="FirebaseManager" method="_on_signup_button_pressed"]
[connection signal="pressed" from="MainView/MainMenu/Log out" to="FirebaseManager" method="_on_logout_button_pressed"]
[connection signal="pressed" from="BackButton" to="BackButton" method="OnPressed"]
